// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get a list of workouts 1`] = `
{
  "workouts": {
    "edges": [
      {
        "node": {
          "createdBy": "ObjectId",
          "description": "EMPTY",
          "id": "FROZEN-ID",
          "name": "Workout NaN name",
          "user": "ObjectId",
        },
      },
    ],
  },
}
`;

exports[`should get a list of workouts in a user that not create this workout 1`] = `
{
  "workouts": {
    "edges": [
      {
        "node": {
          "createdBy": "ObjectId",
          "description": "EMPTY",
          "id": "FROZEN-ID",
          "name": "Workout 1 name",
          "user": "ObjectId",
        },
      },
    ],
  },
}
`;
